[package]
name = "atproto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ['Document', 'Element', 'HtmlElement', 'Window', 'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'FetchEvent', 'ServiceWorkerGlobalScope', 'ServiceWorker'] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
