[package]
name = "publish"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
atrium-api = "0.24.8"
atrium-xrpc = "0.12.0"
atrium-xrpc-client = "0.5.10"
bsky-sdk = "0.1.13"
directories = "5.0.1"
envconfig = "0.11.0"
http = "1.1.0"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tsid = "0.3.1"
