[package]
name = "publish"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
atrium-api = "0.24.8"
atrium-xrpc = "0.12.0"
atrium-xrpc-client = "0.5.10"
bsky-sdk = "0.1.13"
clap = { version = "4.5.23", features = ["env", "derive"] }
directories = "5.0.1"
dom_query = "0.11.0"
envconfig = "0.11.0"
futures = "0.3.31"
html = "0.6.3"
http = "1.1.0"
multibase = "0.9.1"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.41.1", features = ["full"] }
tsid = "0.3.1"
shared = {path = "../shared" }
log = "0.4.22"
env_logger = "0.11.5"
